--- a/kubernetes/deployment-model-service-shadow.yml
+++ b/kubernetes/deployment-model-service-shadow.yml
@@ -22,3 +22,4 @@ spec:
           image: ghcr.io/remla2024-team9/model-service:latest
           ports:
             - containerPort: 5000
+            - containerPort: 8000 # port for metrics
