--- a/monitoring/prometheus-config.yml
+++ b/monitoring/prometheus-config.yml
@@ -8,48 +8,37 @@ data:
     global:
       scrape_interval: 15s
     scrape_configs:
-    - job_name: 'kubernetes-apiservers'
-      kubernetes_sd_configs:
-      - role: endpoints
-    - job_name: 'kubernetes-nodes'
-      kubernetes_sd_configs:
-      - role: node
-    - job_name: 'kubernetes-pods'
-      kubernetes_sd_configs:
-      - role: pod
-    - job_name: 'kubernetes-cadvisor'
-      kubernetes_sd_configs:
-      - role: node
-    - job_name: 'kubernetes-service-endpoints'
-      kubernetes_sd_configs:
-      - role: endpoints
-    - job_name: 'kubernetes-services'
-      kubernetes_sd_configs:
-      - role: service
-    - job_name: 'istio-mesh'
-      kubernetes_sd_configs:
-      - role: pod
-      relabel_configs:
-      - source_labels: [__meta_kubernetes_pod_label_istio]
-        action: keep
-        regex: enabled
-    - job_name: 'app-service'
-      kubernetes_sd_configs:
-      - role: pod
-      relabel_configs:
-      - source_labels: [__meta_kubernetes_pod_label_app]
-        action: keep
-        regex: app-service
-      - source_labels: [__meta_kubernetes_pod_container_port_name]
-        action: keep
-        regex: metrics
-    - job_name: 'model-service'
-      kubernetes_sd_configs:
-      - role: pod
-      relabel_configs:
-      - source_labels: [__meta_kubernetes_pod_label_app]
-        action: keep
-        regex: model-service
-      - source_labels: [__meta_kubernetes_pod_container_port_name]
-        action: keep
-        regex: metrics
+      - job_name: 'kubernetes-apiservers'
+        kubernetes_sd_configs:
+          - role: endpoints
+      - job_name: 'kubernetes-nodes'
+        kubernetes_sd_configs:
+          - role: node
+      - job_name: 'kubernetes-pods'
+        kubernetes_sd_configs:
+          - role: pod
+      - job_name: 'kubernetes-cadvisor'
+        kubernetes_sd_configs:
+          - role: node
+      - job_name: 'kubernetes-service-endpoints'
+        kubernetes_sd_configs:
+          - role: endpoints
+      - job_name: 'kubernetes-services'
+        kubernetes_sd_configs:
+          - role: service
+      - job_name: 'istio-mesh'
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_istio]
+            action: keep
+            regex: enabled
+      - job_name: 'app-service'
+        static_configs:
+          - targets: ['app-service.default.svc.cluster.local:8080']
+      - job_name: 'model-service'
+        static_configs:
+          - targets: ['model-service.default.svc.cluster.local:5000']
+      - job_name: 'model-service-shadow'
+        static_configs:
+          - targets: ['model-service-shadow.default.svc.cluster.local:5000']
