--- a/kubernetes/deployment-model-service.yml
+++ b/kubernetes/deployment-model-service.yml
@@ -10,6 +10,7 @@ spec:
   selector:
     matchLabels:
       app: model-service
+      version: v1
   template:
     metadata:
       labels:
@@ -22,9 +23,9 @@ spec:
           ports:
             - containerPort: 5000
             - containerPort: 8000 # port for metrics
-            livenessProbe:
-              httpGet:
-                path: /metrics
-                port: 5000
-              initialDelaySeconds: 10
-              periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 10
